alignment fixed for different resolutions

--- a/css/layout.css
+++ b/css/layout.css
@@ -20,6 +20,10 @@ div.avatar-wrap {
 	width: 100%;
 }
 
+#mainContent {
+	height: 100%;
+}
+
 #backgroundSpace {
 	width: 0;
 }
@@ -39,20 +43,16 @@ div#divHead img {
 }
 
 .sidebar {
-	background: #f3f3f3 url("../images/header.png") repeat-x left bottom;
-    padding-bottom: 5px;
+	background: #f3f3f3 url("../images/header.png") repeat-y left top;
+    padding-bottom: 0px;
     text-align: center;
     float: left;
     display: block;
-    clear: both;
+    clear: none;
 }
 
 div#navigation {
-    background: #f3f3f3 url("../images/header.png") repeat-x left bottom;
-    padding-bottom: 18px;
-    text-align: center;
-    float: left;
-    display: block;
+    padding-bottom: 10px;
 }
 
 div#navigation a {
@@ -60,8 +60,21 @@ div#navigation a {
     width: 100%;
 }
 
+div#logos {
+	padding-top: 10px;
+	align: center;
+	clear: left;
+	float: left;
+    display: block;
+    height: 100%;
+} 
+
 div#content {
-    margin: 12px;
+	padding: 5px;
+	padding-left: 10px;
+    clear: none;
+    float: none;
+    display: block;
 }
 
 div#lightbox {
@@ -70,17 +83,14 @@ div#lightbox {
     height: 100%;
 }
 
-div#logos {
-	padding-top: 10px;
-	align: center;
-	float: left;
-    display: block;
-} 
-
 #plcLogo {
 	margin-top: 0px;
 	padding-top: 10px;
 	padding-bottom: 10px;
+}
+
+#plc {
+	display: none;
 }
 
 .logoImg {
@@ -92,17 +102,63 @@ div#logos {
 }
 
 
-@media all and (max-width:400px){
-	#mainContent{
-	  display:flex;
+@media all and (max-width:440px){
+	
+	.sidebar {
+		background: #f3f3f3 url("../images/header.png") repeat-y left top;
+		width: calc(100%-10px);
+		clear: both;
+		padding: 5px;
+	}
+	
+	#mainContent {
+	  display: flex;
 	  flex-flow: column;
 	}
-	#navigation{order:1;}
-	#logos{order:3;}
-	#content{order:2;}
+	
+	#navigation {
+		order: 1;
+	}
+	#logos {
+		order: 3;
+	}
+	div#content{ 
+		order: 2;
+		padding: 5px;
+		width: calc(100% - 10px);
+		margin: 0px;
+		clear: both;
+	}
+	
+	#plc {
+		display: block;
+	}
+	#plcLogo {
+		display: none;
+	}
+
 }
 
-@media all and (min-width: 822px) {
+@media all and (min-width:440px) {
+	html {
+        background: #fff url("../images/sidebar.png") repeat-y left top;
+        background-size: 155px;
+    }
+    
+    .sidebar {
+		background: none;
+		padding: 5px 5px 5px 13px;
+		width: 135px;
+	}
+	
+	div#content { 
+		margin: 0px;
+		margin-left: calc(135px + 20px);
+    }
+}
+
+
+@media all and (min-width: 880px) {
     html {
         background: #fff url("../images/sidebar.png") repeat-y left top;
         background-size: 180px;
@@ -118,25 +174,23 @@ div#logos {
 	}
 
 	div#divHead {
-		top: 0;
 		width: 880px;
 	}
-
+	
 	.sidebar {
+		width: 150px; 
 		background: none;
-		margin: 5px 5px 5px 13px;
-        width: 150px;
 	}
 	
     div#navigation {
         background: none;
         float: left;
         left: 0px;
-        margin: 5px 5px 5px 13px;
-        width: 150px;
     }
     
-    
+    div#navigation h1#plc {
+		display: none;
+	}
 
     div#navigation h1, div#navigation a {
         display: block;
@@ -150,8 +204,7 @@ div#logos {
     }
 
     div#content {
-        margin: 0px 0px 0px 156px;
-        padding: 0px 36px 0px 36px;
+        margin-left: calc(180px + 5px);
         width: 648px;
     }
 
